# vlm

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
scripts/: prepare_dataset.py  setup.sh  verify_pytorch.py
src/vlm/: __init__.py
src/vlm/configs/: __init__.py  data_config.py  model_config.py
src/vlm/data/: __init__.py  llava_pretrain_dataset.py
src/vlm/inference/: __init__.py  inference.py  inference_service.py  model_loader.py
src/vlm/models/: __init__.py  connector.py  language_model.py  llava.py  vision_encoder.py
src/vlm/scripts/: verify_llava.py
src/vlm/train/: run.py  trainer.py
