[project]
name = "vlm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yxjiang", email = "2237303+yxjiang@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch==2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.55.0",
    "Pillow>=10.0.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
